ECA-345: refactor CA to not use 'owner'. Now it is ready for caching.
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@3536 37aeb1de-b14b-0410-9a0e-82b28170d228